--- a/.github/workflows/lean.yml
+++ b/.github/workflows/lean.yml
@@ -25,7 +25,7 @@ env:
   REPO_URL: https://github.com/coolsnowwolf/lede
   REPO_BRANCH: master
   FEEDS_CONF: lean.feeds.config
-  CONFIG_FILE: lean.config
+  CONFIG_FILE: jingjian.config
   DIY_SHELL: diy.sh
   TZ: Asia/Shanghai
 
